Start porting over functionality of Backbone PostSettingsView into AngularJS

--- a/core/client/tpl/preview.hbs
+++ b/core/client/tpl/preview.hbs
@@ -11,9 +11,7 @@
     <section class="post-controls">
         <a class="post-edit" href="#" title="Edit Post"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".post-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
-        <div class="post-settings-menu menu-drop-right overlay">
-            <post-settings-menu></post-settings-menu>
-        </div>
+        <post-settings-menu class="menu-drop-right overlay"></post-settings-menu>
     </section>
 </header>
 <section class="content-preview-content">
