--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -42,9 +42,7 @@
 
             <section id="entry-controls">
                 <a class="post-settings" href="#" data-toggle=".post-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
-                <div class="post-settings-menu menu-right overlay">
-                    <post-settings-menu></post-settings-menu>
-                </div>
+                <post-settings-menu class="menu-right overlay"></post-settings-menu>
             </section>
 
             <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
