--- a/core/server/views/default-ember.hbs
+++ b/core/server/views/default-ember.hbs
@@ -31,23 +31,11 @@
     <link rel="stylesheet" href="{{asset "css/screen.css" ghost="true"}}">
 </head>
 <body class="{{bodyClass}}{{update_notification classOnly="true"}}">
-    {{#unless hideNavbar}}
-        {{> navbar}}
-    {{/unless}}
 
-    <main role="main" id="main">
-        {{update_notification}}
+    <div id="ember-app"></div>
 
-        <aside id="notifications" class="notifications">
-            {{> notifications}}
-        </aside>
-
-        {{{body}}}
-    </main>
-
-    <div id="modal-container"></div>
-    <div class="modal-background fade"></div>
-
-    {{{ghost_script_tags}}}
+    <script src="/ghost/scripts/vendor-ember.js"></script>
+    <script src="/ghost/scripts/templates-ember.js"></script>
+    <script src="/ghost/scripts/ghost-dev-ember.js"></script>
 </body>
 </html>
