--- a/core/server/views/default-ember.hbs
+++ b/core/server/views/default-ember.hbs
@@ -32,10 +32,12 @@
 </head>
 <body class="{{bodyClass}}{{update_notification classOnly="true"}}">
 
-    <div id="ember-app"></div>
-
     <script src="/ghost/scripts/vendor-ember.js"></script>
     <script src="/ghost/scripts/templates-ember.js"></script>
     <script src="/ghost/scripts/ghost-dev-ember.js"></script>
+
+    <script>
+      window.App = require('ghost/app')['default'].create();
+    </script>
 </body>
 </html>
