--- a/core/client/templates/posts.hbs
+++ b/core/client/templates/posts.hbs
@@ -8,9 +8,9 @@
         </header>
         <section class="content-list-content">
             <ol class="posts-list">
-                {{#each posts itemController="post"}}
+                {{#each itemController="posts/post"}}
                     {{#view "post-item-view" tagName="li" post=this}} <!-- needed because of "active" class on li item -->
-                        {{#link-to 'post' this class="permalink" title="Edit this post"}}
+                        {{#link-to 'posts.post' this class="permalink" title="Edit this post"}}
                             <h3 class="entry-title">{{title}}</h3>
                             <section class="entry-meta">
                                 <span class="status">
@@ -30,7 +30,6 @@
             </ol>
         </section>
     </section>
-
     <section class="content-preview js-content-preview">
         {{outlet}}
     </section>
