Adds frontend for Code Injection
Ref #1993
- URL is /ghost/settings/code
- Created Ghost.Views.TextArea for CodeMirror as component
- Added default styles for CodeMirror TextArea component
- Added JS/HTML/CSS syntax highlighting files to vendor/codemirror
- Fixes path of codemirror support files in Gruntfile.js

--- a/core/client/assets/sass/layouts/settings.scss
+++ b/core/client/assets/sass/layouts/settings.scss
@@ -320,6 +320,26 @@
             color: darken($brown, 5%);
         }
 
+        &#code {
+
+            p {
+                font-size: 14px;
+                color: $midgrey;
+                margin-top: 0px;
+
+                &.description {
+                    font-size: 13px;
+                }
+
+            }
+
+            h3 {
+                font-size: 14px;
+                margin-bottom: 0px;
+            }
+
+        }
+
     }//.settings-content
 
 }//.settings
