--- a/core/client/tpl/settings/sidebar.hbs
+++ b/core/client/tpl/settings/sidebar.hbs
@@ -6,5 +6,6 @@
         <li class="general"><a href="#general">General</a></li>
         <li class="users"><a href="#user">User</a></li>
         <li class="apps"><a href="#apps">Apps</a></li>
+        <li class="code"><a href="#code">Code Injection</a></li>
     </ul>
 </nav>
