--- a/core/client/templates/posts.hbs
+++ b/core/client/templates/posts.hbs
@@ -8,24 +8,22 @@
         </header>
         <section class="content-list-content">
             <ol class="posts-list">
-                {{#each itemController="posts/post"}}
-                    {{#view "post-item-view" tagName="li" post=this}} <!-- needed because of "active" class on li item -->
-                        {{#link-to 'posts.post' this class="permalink" title="Edit this post"}}
-                            <h3 class="entry-title">{{title}}</h3>
-                            <section class="entry-meta">
-                                <span class="status">
-                                    {{#if isDraft}}
-                                        <span class="draft">Draft</span>
-                                    {{/if}}
-                                    {{#if isPublished}}
-                                        <time datetime="{{unbound published_at}}" class="date published">
-                                            Published {{format-timeago published_at}}
-                                        </time>
-                                    {{/if}}
-                                </span>
-                            </section>
-                        {{/link-to}}
-                    {{/view}}
+                {{#each itemController="posts/post" itemView="post-item-view" itemTagName="li"}}
+                    {{#link-to 'posts.post' this class="permalink" title="Edit this post"}}
+                        <h3 class="entry-title">{{title}}</h3>
+                        <section class="entry-meta">
+                            <span class="status">
+                                {{#if isDraft}}
+                                    <span class="draft">Draft</span>
+                                {{/if}}
+                                {{#if isPublished}}
+                                    <time datetime="{{unbound published_at}}" class="date published">
+                                        Published {{format-timeago published_at}}
+                                    </time>
+                                {{/if}}
+                            </span>
+                        </section>
+                    {{/link-to}}
                 {{/each}}
             </ol>
         </section>
