Flesh out more of the Ember admin
no issue

- this ports over screens from old admin to
 allow people to begin working on aspects of the screen

- All logged out screens have been imported: Signup, Signin,
 Forgotten password, reset password

- Those screens are now ready for behavior to be ported over

- This also updates templates to be more in line with how they were
 in the old admin

- Littered through the code are @TODO comments of functionality that is
 missing and will need to be resolved before this is production ready

- Also scaffolds out the settings screen and every tab

--- a/core/client/templates/-publish-bar.hbs
+++ b/core/client/templates/-publish-bar.hbs
@@ -2,7 +2,7 @@
     <nav>
         <section id="entry-tags" href="#" class="left">
             <label class="tag-label" for="tags" title="Tags"><span class="hidden">Tags</span></label>
-            <div class="tags">Nothing implemented</div>
+            <div class="tags"></div>
             <input type="hidden" class="tags-holder" id="tags-holder">
             <input class="tag-input" id="tags" type="text" data-input-behaviour="tag" />
             <ul class="suggestions overlay"></ul>
@@ -46,8 +46,9 @@
             </section>
 
             <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
-                <button type="button" class="js-publish-button button-save"></button>
+                <button type="button" class="js-publish-button button-save">Save Draft</button>
                 <a class="options up" data-toggle="ul" href="#" title="Post Settings"><span class="hidden">Post Settings</span></a>
+                {{!-- @TODO: implement popover --}}
                 <ul class="editor-options overlay" style="display:none">
                     <li data-set-status="published"><a href="#"></a></li>
                     <li data-set-status="draft"><a href="#"></a></li>
