--- a/core/client/templates/-floating-header.hbs
+++ b/core/client/templates/-floating-header.hbs
@@ -1,12 +1,14 @@
 <header class="floatingheader">
     <button class="button-back" href="#">Back</button>
-    <a class="unfeatured" href="#" title="Feature this post">
+    {{!-- @TODO: add back title updates depending on featured state --}}
+    <a {{bind-attr class="featured:featured:unfeatured"}} href="#" title="Feature this post">
         <span class="hidden">Star</span>
     </a>
     <small>
-        <span class="status">Written</span>
+        {{!-- @TODO: the if published doesn't seem to work, needs to be fixed --}}
+        <span class="status">{{#if published}}Published{{else}}Written{{/if}}</span>
         <span class="normal">by</span>
-        <span class="author">{{author.name}}</span>
+        <span class="author">{{#if author.name}}{{author.name}}{{else}}{{author.email}}{{/if}}</span>
     </small>
     <section class="post-controls">
         {{#link-to "editor" this class="post-edit" title="Edit Post"}}
