--- a/core/client/templates/-navbar.hbs
+++ b/core/client/templates/-navbar.hbs
@@ -1,8 +1,37 @@
 <header id="global-header" class="navbar">
+    <a class="ghost-logo" href="/" data-off-canvas="left" title="/">
+        <span class="hidden">Ghost </span>
+    </a>
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
-            <li class="content">{{#link-to "posts"}}Content{{/link-to}}</li>
-            <li class="editor">{{#link-to "new"}}New post{{/link-to}}</li>
+            {{!-- @TODO: don't nest link-to attributes
+                currently required to get proper class styling --}}
+            {{#link-to "posts" class="content" tagName="li" disabled=true}}
+                {{#link-to "posts"}}Content{{/link-to}}
+            {{/link-to}}
+            {{#link-to "new" class="editor" tagName="li" disabled=true}}
+                {{#link-to "new"}}New post{{/link-to}}
+            {{/link-to}}
+            {{#link-to "settings" class="settings" tagName="li" disabled=true}}
+                {{#link-to "settings"}}Settings{{/link-to}}
+            {{/link-to}}
+
+            <li id="usermenu" class="usermenu subnav">
+                <a href="#" class="dropdown">
+                    {{!-- @TODO: show avatar of logged in user --}}
+                    <img class="avatar" src="/shared/img/user-image.png" alt="Avatar" />
+                    {{!-- @TODO: show logged in user name or email --}}
+                    <span class="name">Fake Ghost</span>
+                </a>
+                {{!-- @TODO: add functionality to allow for dropdown to work --}}
+                <ul class="overlay">
+                    <li class="usermenu-profile"><a href="#">Your Profile</a></li>
+                    <li class="divider"></li>
+                    <li class="usermenu-help"><a href="http://ghost.org/forum/">Help / Support</a></li>
+                    <li class="divider"></li>
+                    <li class="usermenu-signout"><a href="#">Sign Out</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </header>
