--- a/ghost/admin/templates/-publish-bar.hbs
+++ b/ghost/admin/templates/-publish-bar.hbs
@@ -2,7 +2,7 @@
     <nav>
         <section id="entry-tags" href="#" class="left">
             <label class="tag-label" for="tags" title="Tags"><span class="hidden">Tags</span></label>
-            <div class="tags">Nothing implemented</div>
+            <div class="tags"></div>
             <input type="hidden" class="tags-holder" id="tags-holder">
             <input class="tag-input" id="tags" type="text" data-input-behaviour="tag" />
             <ul class="suggestions overlay"></ul>
@@ -46,8 +46,9 @@
             </section>
 
             <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
-                <button type="button" class="js-publish-button button-save"></button>
+                <button type="button" class="js-publish-button button-save">Save Draft</button>
                 <a class="options up" data-toggle="ul" href="#" title="Post Settings"><span class="hidden">Post Settings</span></a>
+                {{!-- @TODO: implement popover --}}
                 <ul class="editor-options overlay" style="display:none">
                     <li data-set-status="published"><a href="#"></a></li>
                     <li data-set-status="draft"><a href="#"></a></li>
