--- a/ghost/admin/templates/posts.hbs
+++ b/ghost/admin/templates/posts.hbs
@@ -4,22 +4,26 @@
             <section class="content-filter">
                 <small>All Posts</small>
             </section>
-            {{#link-to "new" class="button button-add" title="New Post"}}New Post{{/link-to}}
+            {{#link-to "new" class="button button-add" title="New Post"}}<span class="hidden">New Post</span>{{/link-to}}
         </header>
         <section class="content-list-content">
             <ol class="posts-list">
                 {{#each itemController="posts/post" itemView="post-item-view" itemTagName="li"}}
+                    {{!-- @TODO: Restore functionality where 'featured' and 'page' classes are added for proper posts --}}
                     {{#link-to 'posts.post' this class="permalink" title="Edit this post"}}
                         <h3 class="entry-title">{{title}}</h3>
                         <section class="entry-meta">
                             <span class="status">
-                                {{#if isDraft}}
-                                    <span class="draft">Draft</span>
-                                {{/if}}
                                 {{#if isPublished}}
-                                    <time datetime="{{unbound published_at}}" class="date published">
-                                        Published {{format-timeago published_at}}
-                                    </time>
+                                    {{#if page}}
+                                            <span class="page">Page</span>
+                                    {{else}}
+                                        <time datetime="{{unbound published_at}}" class="date published">
+                                            Published {{format-timeago published_at}}
+                                        </time>
+                                    {{/if}}
+                                {{else}}
+                                    <span class="draft">Draft</span>
                                 {{/if}}
                             </span>
                         </section>
