--- a/core/server/views/default-ember.hbs
+++ b/core/server/views/default-ember.hbs
@@ -16,19 +16,20 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-    <link rel="apple-touch-icon-precomposed" href="{{asset "img/touch-icon-iphone.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{asset "img/touch-icon-ipad.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{asset "img/small.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{asset "img/medium.png" ghost="true"}}" />
+    <link rel="apple-touch-icon-precomposed" href="{{asset "img/touch-icon-iphone.png" ember="true"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{asset "img/touch-icon-ipad.png" ember="true"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{asset "img/small.png" ember="true"}}" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{asset "img/medium.png" ember="true"}}" />
 
     <meta name="application-name" content="Ghost"/>
     <meta name="msapplication-TileColor" content="#ffffff"/>
-    <meta name="msapplication-square70x70logo" content="{{asset "img/small.png" ghost="true"}}" />
-    <meta name="msapplication-square150x150logo" content="{{asset "img/medium.png" ghost="true"}}" />
-    <meta name="msapplication-square310x310logo" content="{{asset "img/large.png" ghost="true"}}" />
+    <meta name="msapplication-square70x70logo" content="{{asset "img/small.png" ember="true"}}" />
+    <meta name="msapplication-square150x150logo" content="{{asset "img/medium.png" ember="true"}}" />
+    <meta name="msapplication-square310x310logo" content="{{asset "img/large.png" ember="true"}}" />
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,700">
-    <link rel="stylesheet" href="{{asset "css/ghost-ui.min.css" ghost="true"}}">
+    <link rel="stylesheet" href="{{asset "css/ghost-ui.min.css" ember="true"}}">
+    <link rel="stylesheet" href="{{asset "css/ember-hacks.css" ember="true"}}">
 </head>
 <body class="{{bodyClass}}{{update_notification classOnly="true"}}">
 
