--- a/ghost/admin/templates/settings/user.hbs
+++ b/ghost/admin/templates/settings/user.hbs
@@ -2,18 +2,16 @@
     <button class="button-back">Back</button>
     <h2 class="title">Your Profile</h2>
     <section class="page-actions">
-        <button class="button-save">Save</button>
+        <button class="button-save" {{action 'save'}}>Save</button>
     </section>
 </header>
 
 <section class="content no-padding">
 
     <header class="user-profile-header">
-        {{!-- @TODO: once we have asset helper in place we can restore this, right now it errors
-        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}{{asset "shared/img/user-cover.png"}}{{/if}}" title="{{name}}'s Cover Image"/>
-        --}}
+        <img id="user-cover" class="cover-image" {{bind-attr src=cover title=coverTitle}} />
 
-        <a class="edit-cover-image js-modal-cover button" href="#">Change Cover</a>
+        <a class="edit-cover-image js-modal-cover button" {{action 'cover'}}>Change Cover</a>
     </header>
 
     <form class="user-profile" novalidate="novalidate">
@@ -21,15 +19,13 @@
         <fieldset class="user-details-top">
 
             <figure class="user-image">
-                {{!-- @TODO: once we have asset helper in place we can restore this, right now it errors
-                <div id="user-image" class="img" style="background-image: url({{#if image}}{{image}}{{else}}{{asset "shared/img/user-image.png"}}{{/if}});" href="#"><span class="hidden">{{name}}'s Picture</span></div>
-                --}}
-                <a href="#" class="edit-user-image js-modal-image">Edit Picture</a>
+                <div id="user-image" class="img" {{bind-attr style=image}} href="#"><span class="hidden">{{name}}'s Picture</span></div>
+                <a {{action 'image'}} class="edit-user-image js-modal-image">Edit Picture</a>
             </figure>
 
             <div class="form-group">
                 <label for="user-name" class="hidden">Full Name</label>
-                <input type="url" value="{{name}}" id="user-name" placeholder="Full Name" autocorrect="off" />
+                {{input value=user.name id="user-name" placeholder="Full Name" autocorrect="off"}}
                 <p>Use your real name so people can recognise you</p>
             </div>
 
@@ -39,28 +35,28 @@
 
             <div class="form-group">
                 <label for"user-email">Email</label>
-                {{input type="email" value=email id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off"}}
+                {{input type="email" value=user.email id="user-email" placeholder="Email Address" autocapitalize="off" autocorrect="off"}}
                 <p>Used for notifications</p>
             </div>
 
             <div class="form-group">
                 <label for="user-location">Location</label>
-                {{input type="text" value=location id="user-location"}}
+                {{input type="text" value=user.location id="user-location"}}
                 <p>Where in the world do you live?</p>
             </div>
 
             <div class="form-group">
                 <label for="user-website">Website</label>
-                {{input type="text" value=website id="user-website" autocapitalize="off" autocorrect="off"}}
+                {{input type="text" value=user.website id="user-website" autocapitalize="off" autocorrect="off"}}
                 <p>Have a website or blog other than this one? Link it!</p>
             </div>
 
             <div class="form-group bio-container">
                 <label for="user-bio">Bio</label>
-                {{textarea id="user-bio" value=bio}}
+                {{textarea id="user-bio" value=user.bio}}
                 <p>
                     Write about you, in 200 characters or less.
-                    <span class="word-count">0</span>
+                    <span class="word-count">{{count-words user.bio}}</span>
                 </p>
             </div>
 
@@ -72,20 +68,20 @@
 
             <div class="form-group">
                 <label for="user-password-old">Old Password</label>
-                {{input type="password" id="user-password-old"}}
+                {{input value=password type="password" id="user-password-old"}}
             </div>
 
             <div class="form-group">
                 <label for="user-password-new">New Password</label>
-                {{input type="password" id="user-password-new"}}
+                {{input value=newpassword type="password" id="user-password-new"}}
             </div>
 
             <div class="form-group">
                 <label for="user-new-password-verification">Verify Password</label>
-                {{input type="password" id="user-new-password-verification"}}
+                {{input value=ne2password type="password" id="user-new-password-verification"}}
             </div>
             <div class="form-group">
-                <button type="button" class="button-delete button-change-password">Change Password</button>
+                <button type="button" class="button-delete button-change-password" {{action 'password'}}>Change Password</button>
             </div>
 
         </fieldset>
