--- a/ghost/admin/templates/forgotten.hbs
+++ b/ghost/admin/templates/forgotten.hbs
@@ -1,7 +1,7 @@
 <section class="forgotten-box js-forgotten-box">
-    <form id="forgotten" class="forgotten-form" method="post" novalidate="novalidate">
+    <form id="forgotten" class="forgotten-form" method="post" novalidate="novalidate" {{action "submit" on="submit"}}>
         <div class="email-wrap">
-            <input class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off">
+            {{input value=email class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off"}}
         </div>
         <button class="button-save" type="submit">Send new password</button>
     </form>
