--- a/ghost/admin/templates/signup.hbs
+++ b/ghost/admin/templates/signup.hbs
@@ -1,7 +1,7 @@
-<section class="signup-box js-signup-box">
+<section class="signup-box js-signup-box fade-in">
     <form id="signup" class="signup-form" method="post" novalidate="novalidate">
         <div class="name-wrap">
-            <input class="name" type="text" placeholder="Full Name" name="name" autocorrect="off" />
+            <input class="name" type="text" placeholder="Full Name" name="name" autofocus autocorrect="off" />
         </div>
         <div class="email-wrap">
             <input class="email" type="email" placeholder="Email Address" name="email" autocapitalize="off" autocorrect="off" />
