--- a/core/client/templates/-publish-bar.hbs
+++ b/core/client/templates/-publish-bar.hbs
@@ -10,39 +10,9 @@
         <div class="right">
 
             <section id="entry-controls">
-                <a class="post-settings" href="#" data-toggle=".post-settings-menu" title="Post Settings"><span class="hidden">Post Settings</span></a>
-                <div class="post-settings-menu menu-right overlay">
-                    <form>
-                        <table class="plain">
-                            <tr class="post-setting">
-                                <td class="post-setting-label">
-                                    <label for="url">URL</label>
-                                </td>
-                                <td class="post-setting-field">
-                                    <input id="url" class="post-setting-slug" type="text" placeholder="" value="" />
-                                </td>
-                            </tr>
-                            <tr class="post-setting">
-                                <td class="post-setting-label">
-                                    <label for="pub-date">Pub Date</label>
-                                </td>
-                                <td class="post-setting-field">
-                                    <input id="pub-date" class="post-setting-date" type="text" placeholder="Now" value=""><!--<span class="post-setting-calendar"></span>-->
-                                </td>
-                            </tr>
-                            <tr class="post-setting">
-                                <td class="post-setting-label">
-                                    <span class="label">Static Page</span>
-                                </td>
-                                <td class="post-setting-item">
-                                    <input id="static-page" class="post-setting-static-page" type="checkbox" value="">
-                                    <label class="checkbox" for="static-page"></label>
-                                </td>
-                            </tr>
-                        </table>
-                    </form>
-                    <a class="delete" href="#">Delete This Post</a>
-                </div>
+                <a class="post-settings" title="Post Settings" {{action 'editSettings'}}><span class="hidden">Post Settings</span></a>
+                <!-- @TODO Use Ghost Popover (#2565) and style arrow down -->
+                {{view "post-settings-menu-view"}}
             </section>
 
             <section id="entry-actions" class="js-publish-splitbutton splitbutton-save">
