Fixed admin navbar icons
Closes #2708
- Edited classNames to use correct names: settings and editor.

--- a/core/client/templates/-navbar.hbs
+++ b/core/client/templates/-navbar.hbs
@@ -5,8 +5,8 @@
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
             {{activating-list-item route="posts" title="Content" classNames="content"}}
-            {{activating-list-item route="new" title="New post" classNames="content"}}
-            {{activating-list-item route="settings" title="Settings" classNames="content"}}
+            {{activating-list-item route="new" title="New post" classNames="editor"}}
+            {{activating-list-item route="settings" title="Settings" classNames="settings"}}
 
             <li id="usermenu" class="usermenu subnav">
                 <a href="" {{action 'toggleMenu'}} class="dropdown">
