Implement signup in Ember
Closes #2410

- Add signup action that posts to signup endpoint
- Fix nav bar showing on signup page
- Fix image link when a user hasn't set their image yet
- Redirect to the ember/signin page if requesting an ember page

--- a/core/client/templates/application.hbs
+++ b/core/client/templates/application.hbs
@@ -1,6 +1,6 @@
-{{#if isSignedIn}}
+{{#unless hideNav}}
     {{partial "navbar"}}
-{{/if}}
+{{/unless}}
 
 <main role="main" id="main">
     {{ghost-notifications}}
