--- a/core/client/templates/-navbar.hbs
+++ b/core/client/templates/-navbar.hbs
@@ -10,7 +10,11 @@
 
             <li id="usermenu" class="usermenu subnav">
                 <a href="javascript:void(0);" {{action 'toggleMenu'}} class="dropdown">
+                    {{#if user.image}}
                     <img class="avatar" {{bind-attr src="user.image"}} alt="Avatar" />
+                    {{else}}
+                    <img class="avatar" src="/shared/img/user-image.png" alt="Avatar" />
+                    {{/if}}
                     <span class="name">{{user.name}}</span>
                 </a>
                 {{!-- @TODO: add functionality to allow for dropdown to work --}}
