--- a/core/client/templates/settings/user.hbs
+++ b/core/client/templates/settings/user.hbs
@@ -1,4 +1,4 @@
-<header>
+<header class="fade-in">
     <button class="button-back">Back</button>
     <h2 class="title">Your Profile</h2>
     <section class="page-actions">
@@ -6,7 +6,7 @@
     </section>
 </header>
 
-<section class="content no-padding">
+<section class="content no-padding fade-in">
 
     <header class="user-profile-header">
         <img id="user-cover" class="cover-image" {{bind-attr src=cover title=coverTitle}} />
