Update Ember Components with proper gh- prefix
GH-ISSUE 2373

--- a/core/client/templates/application.hbs
+++ b/core/client/templates/application.hbs
@@ -3,8 +3,8 @@
 {{/unless}}
 
 <main role="main" id="main">
-    {{ghost-notifications}}
-    
+    {{gh-notifications}}
+
     {{outlet}}
 </main>
 {{outlet modal}}
