--- a/core/client/templates/debug.hbs
+++ b/core/client/templates/debug.hbs
@@ -28,7 +28,7 @@
                 <fieldset>
                     <div class="form-group">
                         <label>Import</label>
-                        {{file-upload onUpload="importData" uploadButtonText=uploadButtonText}}
+                        {{gh-file-upload onUpload="importData" uploadButtonText=uploadButtonText}}
                         <p>Import from another Ghost installation. If you import a user, this will replace the current user & log you out.</p>
                     </div>
                 </fieldset>
