--- a/core/client/templates/modals/markdown.hbs
+++ b/core/client/templates/modals/markdown.hbs
@@ -1,4 +1,4 @@
-{{#modal-dialog action="closeModal" showClose=true style="wide" animation="fade"
+{{#gh-modal-dialog action="closeModal" showClose=true style="wide" animation="fade"
     title="Markdown Help"}}
     <section class="markdown-help-container">
         <table class="modal-markdown-help-table">
@@ -69,4 +69,4 @@
         </table>
         For further Markdown syntax reference: <a href="http://daringfireball.net/projects/markdown/syntax" target="_blank">Markdown Documentation</a>
     </section>
-{{/modal-dialog}}
+{{/gh-modal-dialog}}
