--- a/core/client/templates/modals/upload.hbs
+++ b/core/client/templates/modals/upload.hbs
@@ -1,4 +1,4 @@
-{{#upload-modal action="closeModal" close=true type="action" style="wide"
+{{#gh-upload-modal action="closeModal" close=true type="action" style="wide"
    animation="fade"}}
 
   <section class="js-drop-zone">
@@ -6,4 +6,4 @@
       <input data-url="upload" class="js-fileupload main" type="file" name="uploadimage" {{#if options.acceptEncoding}}accept="{{options.acceptEncoding}}"{{/if}}>
   </section>
 
-{{/upload-modal}}
+{{/gh-upload-modal}}
