--- a/core/client/templates/posts.hbs
+++ b/core/client/templates/posts.hbs
@@ -19,7 +19,7 @@
                                             <span class="page">Page</span>
                                     {{else}}
                                         <time datetime="{{unbound published_at}}" class="date published">
-                                            Published {{format-timeago published_at}}
+                                            Published {{gh-format-timeago published_at}}
                                         </time>
                                     {{/if}}
                                 {{else}}
