--- a/core/client/templates/posts/post.hbs
+++ b/core/client/templates/posts/post.hbs
@@ -5,7 +5,7 @@
   <section class="content-preview-content">
       <div class="wrapper">
           <h1>{{title}}</h1>
-          {{format-markdown markdown}}
+          {{gh-format-markdown markdown}}
       </div>
   </section>
 
