--- a/core/client/templates/-navbar.hbs
+++ b/core/client/templates/-navbar.hbs
@@ -4,9 +4,9 @@
     </a>
     <nav id="global-nav" role="navigation">
         <ul id="main-menu" >
-            {{activating-list-item route="posts" title="Content" classNames="content"}}
-            {{activating-list-item route="new" title="New post" classNames="editor"}}
-            {{activating-list-item route="settings" title="Settings" classNames="settings"}}
+            {{gh-activating-list-item route="posts" title="Content" classNames="content"}}
+            {{gh-activating-list-item route="new" title="New post" classNames="editor"}}
+            {{gh-activating-list-item route="settings" title="Settings" classNames="settings"}}
 
             <li id="usermenu" class="usermenu subnav">
                 <a href="javascript:void(0);" {{action 'toggleMenu'}} class="dropdown">
@@ -18,7 +18,7 @@
                     <span class="name">{{user.name}}</span>
                 </a>
                 {{!-- @TODO: add functionality to allow for dropdown to work --}}
-                {{#ghost-popover open=showMenu}}
+                {{#gh-popover open=showMenu}}
                     <ul class="overlay">
                         <li class="usermenu-profile">{{#link-to 'settings.user'}}Your Profile{{/link-to}}</li>
                         <li class="divider"></li>
@@ -26,7 +26,7 @@
                         <li class="divider"></li>
                         <li class="usermenu-signout"><a href="#">Sign Out</a></li>
                     </ul>
-                {{/ghost-popover}}
+                {{/gh-popover}}
             </li>
         </ul>
     </nav>
