--- a/core/client/templates/editor.hbs
+++ b/core/client/templates/editor.hbs
@@ -11,16 +11,16 @@
             <a class="markdown-help" href="" {{action "openModal" "markdown"}}><span class="hidden">What is Markdown?</span></a>
         </header>
         <section id="entry-markdown-content" class="entry-markdown-content">
-            {{-codemirror value=markdown scrollPosition=view.scrollPosition}}
+            {{gh-codemirror value=markdown scrollPosition=view.scrollPosition}}
         </section>
     </section>
 
     <section class="entry-preview">
         <header class="floatingheader">
-            <small>Preview <span class="entry-word-count js-entry-word-count">{{count-words markdown}} words</span></small>
+            <small>Preview <span class="entry-word-count js-entry-word-count">{{gh-count-words markdown}} words</span></small>
         </header>
         <section class="entry-preview-content">
-            {{-markdown markdown=markdown scrollPosition=view.scrollPosition}}
+            {{gh-markdown markdown=markdown scrollPosition=view.scrollPosition}}
         </section>
     </section>
 </section>
