--- a/core/client/templates/post-settings-menu.hbs
+++ b/core/client/templates/post-settings-menu.hbs
@@ -6,7 +6,7 @@
                     <label for="url">URL</label>
                 </td>
                 <td class="post-setting-field">
-                    {{blur-text-field class="post-setting-slug" id="url" value=newSlug action="updateSlug" placeholder=slugPlaceholder selectOnClick="true"}}
+                    {{gh-blur-text-field class="post-setting-slug" id="url" value=newSlug action="updateSlug" placeholder=slugPlaceholder selectOnClick="true"}}
                 </td>
             </tr>
             <tr class="post-setting">
@@ -14,7 +14,7 @@
                     <label for="pub-date">Pub Date</label>
                 </td>
                 <td class="post-setting-field">
-                    {{blur-text-field class="post-setting-date" value=view.publishedAt action="updatePublishedAt" placeholder=view.datePlaceholder}}
+                    {{gh-blur-text-field class="post-setting-date" value=view.publishedAt action="updatePublishedAt" placeholder=view.datePlaceholder}}
                 </td>
             </tr>
             <tr class="post-setting">
